fix css bugs where sizes isnt adjusting and hero button not aligning

--- a/styles/home.css
+++ b/styles/home.css
@@ -96,9 +96,8 @@ header .text-container {
     width: clamp(300px, 50vw, 80vw);
   }
 
-  .text-container {
+  .hero .text-container {
     align-items: center;
-    text-align: center;
     gap: 1rem;
   }
 }
@@ -112,8 +111,7 @@ header .text-container {
     width: clamp(300px, 50vw, 80vw);
   }
 
-  .text-container {
-    align-items: center;
+  .hero .text-container {
     text-align: center;
     gap: 1rem;
   }
@@ -125,8 +123,10 @@ header .text-container {
 
 @media screen and (max-width: 576px) {
   .container {
-    margin: auto;
-    padding: 2rem 0;
+    .container {
+      padding: 1rem;
+      margin: 0 1rem;
+    }
   }
 
   .hero img {
