--- a/styles/index.css
+++ b/styles/index.css
@@ -210,6 +210,7 @@ a:hover::after {
 .small-nav {
   display: none;
 }
+
 .container {
   display: flex;
   justify-content: space-between;
@@ -238,7 +239,7 @@ h1 span {
   border-radius: 0.25rem;
 }
 
-.banner-container{
+.banner-container {
   width: 100vw;
   overflow: hidden;
 }
@@ -267,10 +268,10 @@ h1 span {
 }
 
 .box:first-child {
-  animation: bannermove 50s linear infinite;
+  animation: bannerMove 50s linear infinite;
 }
 
-@keyframes bannermove {
+@keyframes bannerMove {
   0% {
     margin-left: 0px;
     transform: translateX(0);
@@ -382,6 +383,7 @@ h1 span {
   }
   .container {
     padding: 1rem;
+    margin: 0 1rem;
   }
 }
 
@@ -414,5 +416,9 @@ h1 span {
   .btn {
     font-size: 1rem;
     padding: 0.75rem 1.25rem;
+  }
+  .container {
+    padding: 1rem;
+    margin: 0 1rem;
   }
 }
